Fix positioning of label on mobile
Former-commit-id: e0c2e59b1f9eb4dc119557bde0655c45552376af

--- a/_sass/_subscribe-nav.scss
+++ b/_sass/_subscribe-nav.scss
@@ -6,10 +6,8 @@
 .subscribe-nav-label {
   flex: 0 1 auto;
   position: relative;
-  margin-bottom: -2px;
   padding: .275rem 1rem .2rem;
   border-radius: 4px 4px 0 0;
-  background-color: var(--subscribe-nav-color);
   font-size: .825rem;
   font-weight: var(--font-bold);
   color: #494949;
